[package]
name = "tableau-monitoring-execd"
version = "0.1.0"
authors = ["Foldi Tamas <tfoldi@starschema.com>"]
edition = "2018"
description = "telegraf execd for getting Tableau Cluster status using TSM API and serverinfo.xml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.0.0-rc2", features = ["json", "cookies", "tls"] }
roxmltree = "0.13.0"
