[package]
name = "tableau-monitoring-execd"
version = "1.0.0-rc3"
authors = ["Tamas Foldi <tfoldi@starschema.com>"]
edition = "2018"
description = "telegraf execd for getting Tableau Cluster status using TSM API and serverinfo.xml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
setuid = ["users"]

[dependencies]
ureq = { version = "2.0.0-rc2", features = ["json", "cookies", "tls"] }
roxmltree = "0.13.0"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
webpki = "0.21.0"
serde = { version = "*"}
clap = "3.0.0-beta.2"
thrift = "0.13.0"
users = { version = "0.11.0", optional = true }